--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
+  <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   <meta charset="UTF-8">
+  <title>Fotomatic</title>
 </head>
 <body>
   <!-- Header -->
